test/corpus/option.txt
================================================================================
Option
================================================================================

syntax = "proto3";

option go_package = "foo";
option java_multiple_files = true;
option int_dec_lit = 42;
option int_oct_lit = 070;
option int_hex_lit = 0xDEADBEEF;
option int_neg_hex_lit = -0xDEADBEEF;
option int_pos_hex_lit = +0xDEADBEEF;
option features.utf8_validation = NONE;
option int_float_lit = 1.2345;

--------------------------------------------------------------------------------

(source_file
  (syntax)
  (option
    name: (option_name
      (identifier))
    value: (string))
  (option
    name: (option_name
      (identifier))
    value: (bool
      (true)))
  (option
    name: (option_name
      (identifier))
    value: (int_lit
      (decimal_lit)))
  (option
    name: (option_name
      (identifier))
    value: (int_lit
      (octal_lit)))
  (option
    name: (option_name
      (identifier))
    value: (int_lit
      (hex_lit)))
  (option
    name: (option_name
      (identifier))
    value: (int_lit
      (hex_lit)))
  (option
    name: (option_name
      (identifier))
    value: (int_lit
      (hex_lit)))
  (option
    name: (option_name
      (identifier) (identifier))
    value: (full_ident
      (identifier)))
  (option
    name: (option_name
      (identifier))
    value: (float_lit)))
